--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ p {
   font-size: 20px;
   opacity: 0.9;
 }
+
+a{
+  text-decoration: none;
+  font-size: 30pt;
+}
 </style>
 </head>
 
@@ -43,7 +48,7 @@ p {
   <h1>Hola, soy Mila</h1>
   <p>Ingeniera en sentir pena y down senior.</p>
   <br>
-  <p>Visite <a href="https://flame-studios.vercel.app">Flame Studios</a></p>
+  <a href="https://flame-studios.vercel.app">Flame Studios</a>
 </div>
 
 </body>
